--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   </head>
 
   <body>
-    <h1>Page title goes here</h>
-      <p>Let's put a paragraph here for people to read</p>
+    <h1>Page title goes here</h1>
+    <p>Let's put a paragraph here for people to read</p>
+    <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px" /> 
   </body>
 
 </html>
