Added bulleted list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <body>
     <h1>Page title goes here</h1>
     <p>Let's put a paragraph here for people to read</p>
-    <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px" /> 
+    <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px" />
+
+  <ul>
+      <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website. </a></li>
+      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio. </a></li>
+      <li></li>
+  </ul>
   </body>
 
 </html>
