--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 
   <body>
     <h1>Page title goes here</h1>
-    <p>Let's put a paragraph here for people to read</p>
-    <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px" />
-
+    <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
+    <p>Insert joke at a later time</p>
+    <a href="mailto:meobqb@mail.missouri.edu">
+      <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
+</a>
   <ul>
       <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website. </a></li>
       <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio. </a></li>
-      <li></li>
+      <li><a href="index2.html"> A link to antoher page in my site.</a></li>
   </ul>
   </body>
 
