--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
     <title>Megan's class example page</title>
   </head>
 
   <body>
-    <h1>Page title goes here</h1>
+    <h1>Megan's first webpage</h1>
     <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
-    <p>Insert joke at a later time</p>
+    <p>I'd tell a chemistry joke, but I know I wouldn't get a reaction.</p>
     <a href="mailto:meobqb@mail.missouri.edu">
       <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
 </a>
   <ul>
       <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website. </a></li>
       <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio. </a></li>
-      <li><a href="index2.html"> A link to antoher page in my site.</a></li>
+      <li><a href="index2.html"> A link to another page in my site.</a></li>
   </ul>
   </body>
 
