--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
   </head>
-
+  
+<div id="container">
   <body>
     <h1>Megan's first webpage</h1>
     <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
@@ -19,7 +20,8 @@
       <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website. </a></li>
       <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio. </a></li>
       <li><a href="index2.html"> A link to another page in my site.</a></li>
+      <li><a href="oldindex.html"> A link to another page in my site.</a></li>
   </ul>
   </body>
-
+</div> <!--closing container-->
 </html>
