--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 
   <head>
     <title>Megan's class example page</title>
-    <meta http-equiv="content-type"
-		content="text/html;charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  
+
 <div id="container">
   <body>
-    <h1>Megan's first webpage</h1>
+    <h1>Megan's First Website</h1>
     <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
     <p>I'd tell a chemistry joke, but I know I wouldn't get a reaction.</p>
     <a href="mailto:meobqb@mail.missouri.edu">
       <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
 </a>
-  <ul>
-      <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website. </a></li>
-      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio. </a></li>
-      <li><a href="index2.html"> A link to another page in my site.</a></li>
-      <li><a href="oldindex.html"> A link to another page in my site.</a></li>
+  <ul id="nav">
+
+  </nav>
+      <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website </a></li>
+      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio </a></li>
+      <li><a href="index2.html"> A link to another page in my site</a></li>
+      <li><a href="oldindex.html"> A link to my old unstyled page </a></li>
   </ul>
   </body>
 </div> <!--closing container-->
