--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <title>Megan's class example page</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
