--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Megan's class example page</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,700i|Merriweather:400,400i" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
@@ -15,7 +15,9 @@
 
     <h1>Megan's First Website</h1>
     <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
-    <p>I'd tell a chemistry joke, but I know I wouldn't get a reaction.</p>
+    <p>I'd tell a chemistry joke, but I know I wouldn't get a <em>reaction</em>.</p>
+
+
     <a href="mailto:meobqb@mail.missouri.edu">
       <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
 </a>
