--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Megan's class example page</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,700i|Merriweather:400,400i" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
@@ -23,10 +25,10 @@
 </a>
   <ul id="nav">
 
-      <li><a href="http://www.apple.com/" title="A link to Apple's website.">This is a link to Apple's website </a></li>
-      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">This is a link to Megan's Portfolio </a></li>
-      <li><a href="index2.html"> A link to another page in my site</a></li>
-      <li><a href="oldindex.html"> A link to my old unstyled page </a></li>
+      <li><a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
+      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">Megan's Portfolio </a></li>
+      <li><a href="index2.html"> Another page in my site</a></li>
+      <li><a href="oldindex.html"> My old unstyled page </a></li>
   </ul>
 
 </div> <!--closing container-->
