--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,700i|Merriweather:400,400i" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet"/>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
