Trying to flexbox
help

--- a/index.html
+++ b/index.html
@@ -9,30 +9,37 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet"/>
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
 
 
   <body>
-    <div id="container">
+    <ul class="nav">
 
-    <h1>Megan's First Website</h1>
-    <p>Megan Owens. Email: meobqb@mail.missouri.edu </p>
-    <p>I'd tell a chemistry joke, but I know I wouldn't get a <em>reaction</em>.</p>
+     <li class="first"> <a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
+        <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">Megan's Portfolio </a></li>
+        <li><a href="index2.html"> Another page in my site</a></li>
+        <li><a href="oldindex.html"> My old unstyled page </a></li>
+    </ul>
+
+    <div class="wrapper">
+<header class="header">
+    <h1>Megan Owens</h1>
+</header>
+    <p> Megan Owens. Email: meobqb@mail.missouri.edu </p>
+  <p> I'd tell a chemistry joke, but I know I wouldn't get a <em>reaction</em>.</p>
 
 
     <a href="mailto:meobqb@mail.missouri.edu">
-      <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
+    <article class="image">  <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
 </a>
-  <ul id="nav">
+</article>
 
-      <li><a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
-      <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">Megan's Portfolio </a></li>
-      <li><a href="index2.html"> Another page in my site</a></li>
-      <li><a href="oldindex.html"> My old unstyled page </a></li>
-  </ul>
+<aside class="aside"> Lorem ipsum dolor sit amet, aliquam dolor eu torquent. Suspendisse dolor ac, ornare luctus habitant, amet nibh condimentum, nascetur tortor erat, euismod ac vestibulum at lacus dolor. Aliquam nonummy. Fermentum hac praesent quisque. Cras vestibulum dictumst, in aliquet nisl. In in ante conubia class id pharetra. Magna rutrum ligula proin est ut.
+Nibh cras sollicitudin accumsan purus quis porttitor, eu ornare pede orci ut ornare, in amet dolor, aliquam tortor sodales enim, congue diam ipsum at. Ut aliquam vulputate ligula, purus sed. Eget massa vitae aliquam, dui metus et lectus quisque, eu phasellus quam interdum lacus scelerisque sed, ante mauris ac vehicula. Porttitor lacus. Cubilia amet ac curae, nisi vestibulum egestas tincidunt, pede nulla non pellentesque quis, sit proin quam, id tristique vivamus quis semper. Pretium mattis non iaculis, arcu sociosqu nostra metus sem vel duis, tortor per vel sem. Porttitor sit, in sit, justo pellentesque ligula.
+ </aside>
+</div>
 
-</div> <!--closing container-->
   </body>
 
 
