--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <title>Megan's class example page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,700i|Merriweather:400,400i" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
@@ -22,16 +23,16 @@
         <li><a href="oldindex.html"> My old unstyled page </a></li>
     </ul>
 
-    <div class="wrapper">
 <header class="header">
     <h1>Megan Owens</h1>
-</header>
+
     <p> Megan Owens. Email: meobqb@mail.missouri.edu </p>
-  <p> I'd tell a chemistry joke, but I know I wouldn't get a <em>reaction</em>.</p>
-
-
+  <p> I'd tell a chemistry joke, but I know I wouldn't get a <span class= "italic"> reaction.</p>
+</header>
+<div class="wrapper">
+    <article class="image">
     <a href="mailto:meobqb@mail.missouri.edu">
-    <article class="image">  <img src="MeganOwens.jpg" alt="A picture of Megan Owens" width="300px"/>
+    <img src="MeganOwens.jpg" alt="A picture of Megan Owens"/>
 </a>
 </article>
 
