attempting to do assignment 10

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 
   <body>
+    <div id="pagebody">
+<div id="navigation">
     <ul class="nav">
 
      <li class="first"> <a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
@@ -22,11 +24,12 @@
         <li><a href="index2.html"> Another page in my site</a></li>
         <li><a href="oldindex.html"> My old unstyled page </a></li>
     </ul>
-
+</div>
+<div id="content">
 <header class="header">
     <h1>Megan Owens</h1>
 
-    <p> Megan Owens. Email: meobqb@mail.missouri.edu </p>
+    <p> Email: meobqb@mail.missouri.edu </p>
   <p> I'd tell a chemistry joke, but I know I wouldn't get a <span class= "italic"> reaction.</p>
 </header>
 <div class="wrapper">
@@ -35,12 +38,16 @@
     <img src="MeganOwens.jpg" alt="A picture of Megan Owens"/>
 </a>
 </article>
+</div>
 
+<div id="sidebar"
 <aside class="aside-1"> Lorem ipsum dolor sit amet, aliquam dolor eu torquent. Suspendisse dolor ac, ornare luctus habitant, amet nibh condimentum, nascetur tortor erat, euismod ac vestibulum at lacus dolor. Aliquam nonummy. Fermentum hac praesent quisque. Cras vestibulum dictumst, in aliquet nisl. In in ante conubia class id pharetra. Magna rutrum ligula proin est ut.
 Nibh cras sollicitudin accumsan purus quis porttitor, eu ornare pede orci ut ornare, in amet dolor, aliquam tortor sodales enim, congue diam ipsum at. Ut aliquam vulputate ligula, purus sed. Eget massa vitae aliquam, dui metus et lectus quisque, eu phasellus quam interdum lacus scelerisque sed, ante mauris ac vehicula. Porttitor lacus. Cubilia amet ac curae, nisi vestibulum egestas tincidunt, pede nulla non pellentesque quis, sit proin quam, id tristique vivamus quis semper. Pretium mattis non iaculis, arcu sociosqu nostra metus sem vel duis, tortor per vel sem. Porttitor sit, in sit, justo pellentesque ligula.
  </aside>
-</div>
+ </div>
 
+</div>
+</div>
   </body>
 
 
