--- a/index.html
+++ b/index.html
@@ -8,43 +8,59 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,700i|Merriweather:400,400i" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet"/>
-
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="newstyle.css"/>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="menu.js" type="text/javascript"></script>
   </head>
 
-
   <body>
-    <div id="pagebody">
-<div id="navigation">
-    <ul class="nav">
-
-     <li class="first"> <a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
+    <header>
+    <div id="header">
+      <div class="inner">
+          <h2>Megan Owens</h2>
+        </div>
+          </div>
+<div class="wrapper">
+<nav>
+  <div id="nav" class"side">
+    <a class="menu-trigger" href="#">&#9776;</a>
+    <ul>
+      <li><a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
         <li><a href="https://meganowens.myportfolio.com/projects" title="A link to Megan's portfolio.">Megan's Portfolio </a></li>
         <li><a href="index2.html"> Another page in my site</a></li>
         <li><a href="oldindex.html"> My old unstyled page </a></li>
     </ul>
 </div>
+</nav>
+<header>
+<div id="pageBody">
+    <div id="content">
 
-<header class="header">
-    <h1>Megan Owens</h1>
-
+      <div class="inner">
     <p> Email: meobqb@mail.missouri.edu </p>
   <p> I'd tell a chemistry joke, but I know I wouldn't get a <span class= "italic"> reaction.</p>
-</header>
 <div class="wrapper">
     <article class="image">
     <a href="mailto:meobqb@mail.missouri.edu">
     <img src="MeganOwens.jpg" alt="A picture of Megan Owens"/>
 </a>
-</article>
+</div>
+</div>
 
-<aside class="aside-1"> Lorem ipsum dolor sit amet, aliquam dolor eu torquent. Suspendisse dolor ac, ornare luctus habitant, amet nibh condimentum, nascetur tortor erat, euismod ac vestibulum at lacus dolor. Aliquam nonummy. Fermentum hac praesent quisque. Cras vestibulum dictumst, in aliquet nisl. In in ante conubia class id pharetra. Magna rutrum ligula proin est ut.
-Nibh cras sollicitudin accumsan purus quis porttitor, eu ornare pede orci ut ornare, in amet dolor, aliquam tortor sodales enim, congue diam ipsum at. Ut aliquam vulputate ligula, purus sed. Eget massa vitae aliquam, dui metus et lectus quisque, eu phasellus quam interdum lacus scelerisque sed, ante mauris ac vehicula. Porttitor lacus. Cubilia amet ac curae, nisi vestibulum egestas tincidunt, pede nulla non pellentesque quis, sit proin quam, id tristique vivamus quis semper. Pretium mattis non iaculis, arcu sociosqu nostra metus sem vel duis, tortor per vel sem. Porttitor sit, in sit, justo pellentesque ligula.
- </aside>
+<div id="sidebar" class="side">
+  <div class="inner">
+
+<p>Lorem ipsum dolor sit amet, aliquam dolor eu torquent. Suspendisse dolor ac, ornare luctus habitant, amet nibh condimentum, nascetur tortor erat, euismod ac vestibulum at lacus dolor. Aliquam nonummy. Fermentum hac praesent quisque. Cras vestibulum dictumst, in aliquet nisl. In in ante conubia class id pharetra. Magna rutrum ligula proin est ut. </p>
+
+<p> Nibh cras sollicitudin accumsan purus quis porttitor, eu ornare pede orci ut ornare, in amet dolor, aliquam tortor sodales enim, congue diam ipsum at. Ut aliquam vulputate ligula, purus sed. Eget massa vitae aliquam, dui metus et lectus quisque, eu phasellus quam interdum lacus scelerisque sed, ante mauris ac vehicula. Porttitor lacus. Cubilia amet ac curae, nisi vestibulum egestas tincidunt, pede nulla non pellentesque quis, sit proin quam, id tristique vivamus quis semper. Pretium mattis non iaculis, arcu sociosqu nostra metus sem vel duis, tortor per vel sem. Porttitor sit, in sit, justo pellentesque ligula.
+ </p>
 
 </div>
 </div>
+
+</div>
+</div>
+
+
   </body>
-
-
 </html>
