--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
 
   <body>
     <header>
-    <div id="header">
       <div class="inner">
           <h2>Megan Owens</h2>
         </div>
-          </div>
 <div class="wrapper">
 <nav>
-  <div id="nav" class"side">
     <a class="menu-trigger" href="#">&#9776;</a>
     <ul>
       <li><a href="http://www.apple.com/" title="A link to Apple's website.">Apple's website </a></li>
@@ -30,9 +27,8 @@
         <li><a href="index2.html"> Another page in my site</a></li>
         <li><a href="oldindex.html"> My old unstyled page </a></li>
     </ul>
-</div>
 </nav>
-<header>
+</header>
 <div id="pageBody">
     <div id="content">
 
