--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
 
 <p> Nibh cras sollicitudin accumsan purus quis porttitor, eu ornare pede orci ut ornare, in amet dolor, aliquam tortor sodales enim, congue diam ipsum at. Ut aliquam vulputate ligula, purus sed. Eget massa vitae aliquam, dui metus et lectus quisque, eu phasellus quam interdum lacus scelerisque sed, ante mauris ac vehicula. Porttitor lacus. Cubilia amet ac curae, nisi vestibulum egestas tincidunt, pede nulla non pellentesque quis, sit proin quam, id tristique vivamus quis semper. Pretium mattis non iaculis, arcu sociosqu nostra metus sem vel duis, tortor per vel sem. Porttitor sit, in sit, justo pellentesque ligula.
  </p>
-
 </div>
+</div>
+
+<div class="map-wrapper">
+  <iframe
+          width="600"height="450"frameborder="0"style="border:0"src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCZbBucAYzZQ978pRRf50L8J5oTzyXLY2M&origin=Paris+France&waypoints=Eiffel+Tower&destination=Palace+of+Versailles"
+          allowfullscreen>
+        </iframe>
+
 </div>
 
 </div>
